--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+* {
+  margin: 0%;
+  padding: 0%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  height: 100vh;
+  background-image: url('./images/background.gif');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.bird {
+  position: absolute;
+  top: 50px;
+  left: 0px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bird img {
+  height: 100px;
+}
+.goku {
+  position: absolute;
+  bottom: 70px;
+  left: 20px;
+}
+.sonic {
+  position: absolute;
+  bottom: 70px;
+  left: 300px;  
+}
+.sonic img {
+  height: 180px;
+}
+.tree1 {
+  position: absolute;
+  bottom: 140px;
+  left: 00px;
+}
+.tree img {
+  height: 150px;
+}
+.tree2 {
+  position: absolute;
+  bottom: 140px;
+  left: 150px;
+}
+.tree img {
+  height: 150px;
 }
